samples/task/invalid/R16.dita
<?xml version="1.0" encoding="UTF-8"?>
<task>
  <title>Test Title</title>
  <shortdesc>Short description</shortdesc>
  <prolog/>
  <taskbody>
    <steps-unordered><p>This is not a step or stepsection.</p></steps-unordered>
  </taskbody>
</task>